# elastic-solver

./: .gitignore  CMakeLists.txt  README.md  config.json
dat/: sofa0.vtk  sofa1.vtk
doc/: euler_implicit_integrator.tex
example/: CMakeLists.txt  test_arpack.cc  test_cl.cc  test_eigen_solver.cc  test_multiobjects.cc  test_reduced.cc  test_reduced_stvk.cc  test_simulator.cc  test_sofa.cc  test_stvk_full.cc  test_stvk_tet.cc  test_subspace.cc  test_unit.cc
src/: AX_B.mac  ArpackSelfAdjointEigenSolver.h  CMakeLists.txt  constitutive.cc  constitutive.h  constitutive.mac  editing_energy.cc  editing_energy.h  editor.cc  editor.h  elastic_energy.cc  elastic_energy.h  fem_simulator.h  full_simulator.cc  full_simulator.h  mass_matrix.cc  mass_matrix.h  math_function.h  modal_analyzer.cc  modal_analyzer.h  position_cons.cc  position_cons.h  reduced2rs.f90  reduced2rs.h  reduced2rs.mac  simulator.cc  simulator.h  stvk_energy.cc  stvk_energy.h  stvk_simulator.cc  stvk_simulator.h  stvk_tet.h  stvk_tet.mac  types.h  util.cc  util.h  vtk.h  warping.cc  warping.h  warping_energy.h
